--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>澳门一日游互动行程规划 - 6月5日</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>    @media (max-width: 767px) {
+      .content-section { display: block !important; }
+    }
     <!-- Visualization & Content Choices: 
         - Itinerary Flow: Chronological sections, one visible at a time, with text and images. Goal: Organize, Inform, Focus. Interaction: Click nav to show section.
         - Timings & Durations: Text. Goal: Inform.
