--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 <body class="bg-stone-100 text-stone-800">
     <nav class="sticky-nav bg-teal-700/95 text-white shadow-lg backdrop-blur-md">
         <div class="max-w-4xl mx-auto px-2 sm:px-4">
-            <div class="flex items-center h-16 overflow-x-auto scrollbar-hide">
-                <div class="flex flex-nowrap space-x-2 lg:space-x-4 w-full justify-center">
+            <div class="flex items-center h-auto flex-wrap py-2">
+                <div class="flex flex-wrap w-full justify-center gap-2 lg:gap-4">
                     <a href="#section-morning" class="main-nav-link px-4 py-2 rounded-full text-base font-medium hover:bg-teal-600 transition-colors shadow-sm whitespace-nowrap">☀️ 上午</a>
                     <a href="#section-afternoon" class="main-nav-link px-4 py-2 rounded-full text-base font-medium hover:bg-teal-600 transition-colors shadow-sm whitespace-nowrap">🏙️ 下午</a>
                     <a href="#section-evening" class="main-nav-link px-4 py-2 rounded-full text-base font-medium hover:bg-teal-600 transition-colors shadow-sm whitespace-nowrap">🌃 傍晚</a>
@@ -304,7 +304,7 @@
                             <p class="text-sm text-stone-600">🚶‍♂️ 交通：从伦敦人步行约10分钟。</p>
                             <p class="text-sm text-stone-600">☕ 活动：赌场内可能有免费奶茶糕点，可作短暂休整。</p>
                         </div>
-                        <img src="https://bkimg.cdn.bcebos.com/pic/9e3df8dcd100baa1cd1160dbde5eae12c8fcc3ce8037" alt="美狮美高梅" class="attraction-image">
+                        <img src="https://bkimg.cdn.bcebos.com/pic/e850352ac65c10381485f4dbb9119313b07e892b" alt="美狮美高梅" class="attraction-image">
                     </div>
                 </div>
                 <div class="p-4 bg-stone-50 rounded-lg border border-stone-200">
@@ -559,10 +559,3 @@
 
 </body>
 </html>
-
-
-
-.scrollbar-hide::-webkit-scrollbar { display: none; }
-.scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
-
-
