--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>澳门一日游互动行程规划 - 6月5日</title>
+    <title>澳门一日游</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Visualization & Content Choices: 
@@ -304,7 +304,7 @@
                             <p class="text-sm text-stone-600">🚶‍♂️ 交通：从伦敦人步行约10分钟。</p>
                             <p class="text-sm text-stone-600">☕ 活动：赌场内可能有免费奶茶糕点，可作短暂休整。</p>
                         </div>
-                        <img src="https://bkimg.cdn.bcebos.com/pic/e850352ac65c10381485f4dbb9119313b07e892b" alt="美狮美高梅" class="attraction-image">
+                        <img src="https://n.sinaimg.cn/spider20230914/200/w600h400/20230914/7be0-5ee622b2fa5e60367a3040eb7da70a4b.jpg" alt="美狮美高梅" class="attraction-image">
                     </div>
                 </div>
                 <div class="p-4 bg-stone-50 rounded-lg border border-stone-200">
